; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_net.c_bt_mesh_rpl_reset.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_net.c_bt_mesh_rpl_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.bt_mesh_rpl* }
%struct.bt_mesh_rpl = type { i32, i64 }

@bt_mesh = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bt_mesh_rpl_reset() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.bt_mesh_rpl*, align 8
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %30, %0
  %4 = load i32, i32* %1, align 4
  %5 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bt_mesh, i32 0, i32 0), align 8
  %6 = call i32 @ARRAY_SIZE(%struct.bt_mesh_rpl* %5)
  %7 = icmp slt i32 %4, %6
  br i1 %7, label %8, label %33

8:                                                ; preds = %3
  %9 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bt_mesh, i32 0, i32 0), align 8
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.bt_mesh_rpl, %struct.bt_mesh_rpl* %9, i64 %11
  store %struct.bt_mesh_rpl* %12, %struct.bt_mesh_rpl** %2, align 8
  %13 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** %2, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_rpl, %struct.bt_mesh_rpl* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %8
  %18 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** %2, align 8
  %19 = getelementptr inbounds %struct.bt_mesh_rpl, %struct.bt_mesh_rpl* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %17
  %23 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** %2, align 8
  %24 = call i32 @memset(%struct.bt_mesh_rpl* %23, i32 0, i32 16)
  br label %28

25:                                               ; preds = %17
  %26 = load %struct.bt_mesh_rpl*, %struct.bt_mesh_rpl** %2, align 8
  %27 = getelementptr inbounds %struct.bt_mesh_rpl, %struct.bt_mesh_rpl* %26, i32 0, i32 0
  store i32 1, i32* %27, align 8
  br label %28

28:                                               ; preds = %25, %22
  br label %29

29:                                               ; preds = %28, %8
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %1, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %1, align 4
  br label %3

33:                                               ; preds = %3
  ret void
}

declare dso_local i32 @ARRAY_SIZE(%struct.bt_mesh_rpl*) #1

declare dso_local i32 @memset(%struct.bt_mesh_rpl*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
